Landing page overflow fix

--- a/DevConnector/client/src/App.css
+++ b/DevConnector/client/src/App.css
@@ -334,9 +334,13 @@ button {
 
 /* Landing Page */
 .landing {
-  position: relative;
+  position: absolute;
+  top: 0px;
+  right: 0;
+  width: 100%;
   background: url("./img/showcase.jpg") no-repeat center center/cover;
   height: 100vh;
+  overflow: hidden;
 }
 
 .landing-inner {
